--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@ body {
     width: 200px; border-radius: 50%;
 }
 
-header, footer {
+header, footer{
     background-color: #333;
-    color: #fff;
+    color: #ffffff;
     text-align: center;
     padding: 20px;
 }
@@ -28,7 +28,7 @@ header p {
 }
 
 nav {
-    background-color: #444;
+    background-color: #444444;
     padding: 10px;
 }
 
@@ -125,7 +125,7 @@ h2 {
 
 footer {
     padding: 10px;
-    background-color: #00000000;
+    background-color: #333;
 }
 
 footer ul {
